--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Listão UFPA 2018">
+    <meta name="author" content="Agnaldo Marinho">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>Listão UFPA 2018</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 
   <body id="page-top">
 
-    <!-- Navigation -->
+    <!-- Navigation 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
@@ -52,7 +52,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav>-->
 
     <header class="masthead">
       <div class="container h-100">
