--- a/index.html
+++ b/index.html
@@ -32,31 +32,21 @@
   <body id="page-top">
 
     <header class="masthead">
-      <div class="container h-100">
+      <div class="container-fluid">
         <div class="row h-100">
-          <div class="col-lg-7 my-auto">
-            <div class="header-content mx-auto">
-              <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
-            </div>
-          </div>
-          <div class="col-lg-5 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
-                  </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="header-content mx-auto">
+            <h2 style="color:#000000;font-family:NewsGoth Cn BT Bold;">Listão da UFPA 2018</h2>
           </div>
         </div>
       </div>
+      <div class="container-fluid">
+        <div class="row h-100">
+          <div class="header-content mx-auto">
+            <p style="color:#000000;font-family:NewsGoth Cn BT Bold;">Bem-vindos <strong>CALOUROS</strong> da Universidade Federal do Pará!	</p>
+          </div>
+        </div>
+      </div>
+      
     </header>
 
     <footer>
